examples/test/testpolicy13159.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13159
  namespace: namespace453
spec:
  podSelector:
    matchLabels:
      key33: value12
      key21: value45
      key49: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value43
      podSelector:
        matchLabels:
          key2: value6
          key29: value36
